<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/dialog_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btCancel"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            app:tint="@color/grey"
            android:alpha="0.5"
            android:src="@drawable/ic_return" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btSave"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            app:tint="@color/colorAccent"
            android:src="@drawable/ic_check" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_note"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="18sp"
        android:background="@drawable/edittext_background"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:lines="10"
        android:padding="16dp"
        android:textSize="18sp"
        android:background="@drawable/edittext_background"/>

</LinearLayout>