<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_task_note"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TaskNote"
            android:textColor="@color/note"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Version: 1.0.0"
            android:textColor="@color/gray"
            android:textSize="10sp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            android:paddingBottom="16dp"
            android:text="@string/about_gdesc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_task"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/about_tdesc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_note"
                app:tint="@color/note"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/about_ndesc" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="With a clean interface and easy-to-use tools, TaskNote enhances your productivity, keeping your tasks and notes organized in one unified app."
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            android:paddingBottom="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/feedbackSection">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enjoying TaskNote?"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underlined_text"
                android:textColor="@color/note"
                android:textSize="16sp"
                android:layout_marginEnd="4dp" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_unfilled"
                android:contentDescription="Thumb Icon for Feedback" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>